src/tests/snapshots/cclv__tests__acceptance_scroll__jump_to_bottom_shift_g.snap
---
source: src/tests/acceptance_scroll.rs
expression: bottom_output
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main                                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (20 entries) ▶────────────────────────────────────────────────────┐
││        "command": "bd show cclv-07v --json 2>/dev/null | head -100",        │
││        "description": "Show epic details"                                   │
││      }                                                                      │
│── ↓4.3k/41.7k ↑1/24 / $0.02 | Context: 41.7k (20%) ──                        │
││ 17 {"FEATURE_DIR":"/home/claude/cclv/specs/001-claude-code-log-viewer","AVAI│
│                                                                              │
││ 18 001-claude-code-log-viewer                                               │
│                                                                              │
││ 19 [                                                                        │
││      {                                                                      │
││        "id": "cclv-07v.1",                                                  │
││    (+47 more lines)                                                         │
│                                                                              │
││ 20 [                                                                        │
││      {                                                                      │
││        "id": "cclv-07v",                                                    │
││    (+97 more lines)                                                         │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
