src/tests/snapshots/cclv__tests__acceptance_scroll__page_down.snap
---
source: src/tests/acceptance_scroll.rs
expression: paged_output
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main                                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (20 entries)──────────────────────────────────────────────────────┐
│── ↓37.4k/37.4k ↑1/9 / $0.06 | Context: 37.4k (18%) ──                        │
││  7 Launching skill: efficient-subagent-orchestration                        │
│                                                                              │
││  8 Base directory for this skill: /home/claude/.claude/skills/efficient-suba│
││    gent-orchestration                                                       │
││                                                                             │
││    (+180 more lines)                                                        │
│                                                                              │
││  9 Launching skill: beads-project-tracking                                  │
│                                                                              │
││ 10 Base directory for this skill: /home/claude/.claude/skills/beads-project-│
││    tracking                                                                 │
││                                                                             │
││    (+218 more lines)                                                        │
│                                                                              │
││ 11 Now let me follow the coordinator protocol:                              │
││                                                                             │
││    1. **Setup**: Run the prerequisites check                                │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
