src/tests/snapshots/cclv__tests__acceptance_scroll__page_down_2x.snap
---
source: src/tests/acceptance_scroll.rs
expression: second_page_output
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main                                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (20 entries) ▶────────────────────────────────────────────────────┐
││    3. **Check checklists**: Check if there are any checklists               │
││    4. **Load implementation context**: Read the spec files                  │
││    5. **Find ready work**: Use bd ready to find available work              │
││    6. **Execute implementation loop**: Delegate to subagents                │
││                                                                             │
││    Let me start with steps 1-3 in parallel.                                 │
│── ↓4.3k/41.7k ↑1/108 / $0.06 | Context: 41.7k (20%) ──                       │
││ 12 Now let me follow the coordinator protocol. Starting with setup, branch/e│
││    pic verification, and checking for ready work:                           │
│── ↓4.3k/41.7k ↑1/1 / $0.06 | Context: 41.7k (20%) ──                         │
││ 13 🔧a Tool: Bash                                                            │
││      {                                                                      │
││        "command": "./.specify/scripts/bash/check-prerequisites.sh --json 2>/│
││        "description": "Check prerequisites for spec setup"                  │
││      }                                                                      │
│── ↓4.3k/41.7k ↑1/44 / $0.06 | Context: 41.7k (20%) ──                        │
││ 14 🔧  Tool: Bash                                                            │
││      {                                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
