src/tests/snapshots/cclv__tests__acceptance_scroll__scroll_up_k_key_5x.snap
---
source: src/tests/acceptance_scroll.rs
expression: scrolled_up_output
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main                                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (20 entries)──────────────────────────────────────────────────────┐
││  6 🔧a Tool: Skill                                                           │
││      {                                                                      │
││        "skill": "beads-project-tracking"                                    │
││      }                                                                      │
│── ↓37.4k/37.4k ↑1/9 / $0.02 | Context: 37.4k (18%) ──                        │
││  7 Launching skill: efficient-subagent-orchestration                        │
│                                                                              │
││  8 Base directory for this skill: /home/claude/.claude/skills/efficient-suba│
││    gent-orchestration                                                       │
││                                                                             │
││    (+162 more lines)                                                        │
│                                                                              │
││  9 Launching skill: beads-project-tracking                                  │
│                                                                              │
││ 10 Base directory for this skill: /home/claude/.claude/skills/beads-project-│
││    tracking                                                                 │
││                                                                             │
││    (+204 more lines)                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
